Update and rename install.sh to install

--- a/install
+++ b/install
@@ -3,7 +3,6 @@ yum -y --exclude=kernel* update
 # Installs some dependencies
 yum -y install git bc
 git clone https://github.com/MegabyteIO/WP-Droplet.git /usr/local/src/megabyteio
-cd /usr/local/src/megabyteio/scripts
-chmod +x setup.sh
-./setup.sh
+chmod +x /usr/local/src/megabyteio/scripts/setup
+/bin/bash /usr/local/src/megabyteio/scripts/setup
 echo "YO"
